Tarea - Conectar OrdersMS de TCP a NATS

--- a/.env.template
+++ b/.env.template
@@ -1,7 +1,7 @@
 PORT=3002
 
-PRODUCTS_MS_HOST=localhost
-PRODUCTS_MS_PORT=3001
+# PRODUCTS_MS_HOST=localhost
+# PRODUCTS_MS_PORT=3001
 
 # This was inserted by `prisma init`:
 # Environment variables declared in this file are automatically made available to Prisma.
@@ -15,3 +15,8 @@ PRODUCTS_MS_PORT=3001
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="postgresql://postgres:123456@localhost:5432/ordersdb?schema=public"
+
+# URLs de los servidores NATS.
+# Para un único servidor: NATS_SERVERS="nats://localhost:4222"
+# Para múltiples servidores, separar con punto y coma: NATS_SERVERS="nats://server1:4222;nats://server2:4222"
+NATS_SERVERS="nats://localhost:4222"
